--- a/herbaplant/pubspec.yaml
+++ b/herbaplant/pubspec.yaml
@@ -54,6 +54,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+      - assets/image/Logo.png
+      - assets/image/bgpalnt.jpg 
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
