--- a/herbaplant/pubspec.yaml
+++ b/herbaplant/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  lottie: ^3.3.1
+  http: ^1.3.0
+  tflite_flutter: ^0.11.0
+  tflite: ^1.1.2
 
 
 dev_dependencies:
@@ -42,7 +46,9 @@ dev_dependencies:
   image_picker: ^1.1.2
   collection: ^1.15.0
   logger: ^2.5.0
-  
+  tutorial_coach_mark: ^1.2.12
+  flutter_launcher_icons: ^0.14.3
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -59,7 +65,11 @@ flutter:
   assets:
       - assets/image/Logo.png
       - assets/image/bgpalnt.jpg 
-
+      - assets/image/logo_icon.png
+      - assets/image/logonobg.png
+      - assets/animations/
+      - assets/models/model_unquant.tflite
+      - assets/models/labels.txt
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
