--- a/herbaplant/android/gradle.properties
+++ b/herbaplant/android/gradle.properties
@@ -1,3 +1,4 @@
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
+android.jvmargs=-Xlint:-options -Xlint:-deprecation -Xlint:-unchecked
 android.useAndroidX=true
 android.enableJetifier=true
