--- a/herbaplant/android/app/build.gradle
+++ b/herbaplant/android/app/build.gradle
@@ -11,29 +11,27 @@ android {
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
-
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = "11"
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.herbaplant"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
 
+    buildFeatures {
+        mlModelBinding true  // Required for TensorFlow Lite in some cases
+    }
+
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
         }
     }
@@ -42,3 +40,11 @@ android {
 flutter {
     source = "../.."
 }
+
+dependencies {
+    implementation('org.tensorflow:tensorflow-lite:2.11.0') {
+        exclude group: 'com.google.ai.edge.litert', module: 'litert-api'
+        implementation 'com.google.android.material:material:1.9.0'
+    }
+}
+
