--- a/herbaplant/android/app/build.gradle
+++ b/herbaplant/android/app/build.gradle
@@ -6,13 +6,13 @@ plugins {
 }
 
 android {
-    namespace = "com.example.herbaplant"
+    namespace "com.example.herbaplant"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
         jvmTarget = "11"
