--- a/herbaplant/android/gradle.properties
+++ b/herbaplant/android/gradle.properties
@@ -2,3 +2,6 @@ org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryErro
 android.jvmargs=-Xlint:-options -Xlint:-deprecation -Xlint:-unchecked
 android.useAndroidX=true
 android.enableJetifier=true
+android.nonTransitiveRClass=true
+android.defaultConfig.javaCompileOptions.compilerArgs += ["-Xlint:-options"]
+android.defaultConfig.javaCompileOptions.compilerArgs += ["-Xlint:-deprecation"]
