--- a/herbaplant/ios/Runner/Info.plist
+++ b/herbaplant/ios/Runner/Info.plist
@@ -59,6 +59,13 @@
 		</dict>
 	</array>
 
+	<key>NSAppTransportSecurity</key>
+<dict>
+    <key>NSAllowsArbitraryLoads</key>
+    <true/>
+</dict>
+
+
 
 </dict>
 </plist>
