--- a/herbaplant/android/app/src/main/AndroidManifest.xml
+++ b/herbaplant/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+<uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
+
     <application
         android:label="herbaplant"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
+
+        
+        
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -36,6 +42,11 @@
 
          In particular, this is used by the Flutter engine in io.flutter.plugin.text.ProcessTextPlugin. -->
     <queries>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="https" />
+        </intent>
+
         <intent>
             <action android:name="android.intent.action.PROCESS_TEXT"/>
             <data android:mimeType="text/plain"/>
