--- a/herbaplant/pubspec.yaml
+++ b/herbaplant/pubspec.yaml
@@ -41,8 +41,8 @@ dependencies:
   lottie: ^3.3.1
   http: ^1.3.0
   go_router: ^14.7.2
-  uni_links: ^0.5.1
- 
+  app_links: ^3.4.3
+  url_launcher: ^6.1.14
   
 dev_dependencies:
   flutter_test:
