--- a/herbaplant/pubspec.yaml
+++ b/herbaplant/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   go_router: ^14.7.2
   app_links: ^3.4.3
   url_launcher: ^6.1.14
+  flutter_markdown: ^0.7.6+2
+  flutter_local_notifications: ^18.0.1
   
 dev_dependencies:
   flutter_test:
