--- a/herbaplant/android/app/build.gradle
+++ b/herbaplant/android/app/build.gradle
@@ -9,10 +9,12 @@ android {
     namespace "com.example.herbaplant"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
+    
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
+        coreLibraryDesugaringEnabled true
     }
     kotlinOptions {
         jvmTarget = "11"
@@ -20,10 +22,11 @@ android {
 
     defaultConfig {
         applicationId = "com.example.herbaplant"
-        minSdk = flutter.minSdkVersion
+        minSdk = 26   // Change from flutter.minSdkVersion to 26
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+        multiDexEnabled true
     }
 
     buildFeatures {
@@ -45,6 +48,10 @@ dependencies {
     implementation('org.tensorflow:tensorflow-lite:2.11.0') {
         exclude group: 'com.google.ai.edge.litert', module: 'litert-api'
         implementation 'com.google.android.material:material:1.9.0'
+
+        coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'  
+
+        implementation 'androidx.multidex:multidex:2.0.1'
     }
 }
 
