--- a/herbaplant/pubspec.yaml
+++ b/herbaplant/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   app_links: ^3.4.3
   url_launcher: ^6.1.14
   flutter_markdown: ^0.7.6+2
-  flutter_local_notifications: ^18.0.1
+  flutter_local_notifications: ^19.0.0
+  flutter_timezone: ^4.1.0
   
 dev_dependencies:
   flutter_test:
