--- a/herbaplant/android/app/src/main/AndroidManifest.xml
+++ b/herbaplant/android/app/src/main/AndroidManifest.xml
@@ -56,3 +56,10 @@
         </intent>
     </queries>
 </manifest>
+
+<receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver"/>
+<receiver android:name="com.dexterous.flutterlocalnotifications.NotificationPublisher"/>
+<service
+    android:name="com.dexterous.flutterlocalnotifications.ForegroundService"
+    android:permission="android.permission.BIND_JOB_SERVICE"
+    android:foregroundServiceType="mediaProjection"/>
